--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "bst"
 version = "0.1.0"
 authors = ["Deepak Thukral <iapain@gmail.com>"]
 edition = "2018"
+license = "MIT"
+documentation = "https://docs.rs/binary-search-tree"
+repository = "https://github.com/iapain/rust-bst"
+readme = "./README.md"
+keywords = ["tree", "bst"]
+categories = ["mathematics", "data-structures"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
