fix: first prepublish version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bst"
+name = "ds-bst"
 description = "Binary search tree implementation"
 version = "0.1.0"
 authors = ["Deepak Thukral <iapain@gmail.com>"]
