--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 authors = ["Deepak Thukral <iapain@gmail.com>"]
 edition = "2018"
 license = "MIT"
-documentation = "https://docs.rs/binary-search-tree"
+documentation = "https://docs.rs/ds-bst"
 repository = "https://github.com/iapain/rust-bst"
 readme = "./README.md"
 keywords = ["tree", "bst"]
